Fixed Verify Password Error (it was not showing). Fixed unstyled HTML flash before CSS rendering.

--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -561,6 +561,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  height: auto;
 }
 
 @media (min-width: 576px) {
@@ -10804,4 +10805,13 @@ label,
 
 .modal-header .close:hover, .modal-header .close:focus, .modal-footer .close:hover, .modal-footer .close:focus {
   opacity: 1;
+}
+
+section {
+    padding-top: 30px;
+}
+
+html {
+    visibility: visible;
+    opacity: 1;
 }
